--- a/src/main.html
+++ b/src/main.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script>
-    <script src="https://rawgit.com/bbecquet/Leaflet.RotatedMarker/master/leaflet.rotatedMarker.js"></script>
     <style>
         #map {
             position: absolute;
@@ -20,23 +18,25 @@
 </head>
 
 <body>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"></script>
+    <script src="https://rawgit.com/bbecquet/Leaflet.RotatedMarker/master/leaflet.rotatedMarker.js"></script>
     <div id="map"></div>
     <script>
-            class map_interface {
-                static map_options = {
-                    center: [36.983731367697374, -76.29555376681454],
-                    zoom: 13
-                }
-                static boat_icon = L.icon({
-                    iconUrl: "https://github.com/sailbot-vt/ground_station_25/blob/testing/assets/boat.png?raw=true",
-                    iconSize: [50, 50],
-                    iconAnchor: [15, 15]
-                })
-                static wind_icon = L.icon({
-                    iconUrl: "https://github.com/sailbot-vt/ground_station_25/blob/testing/assets/arrow.png?raw=true",
-                    iconSize: [30, 30],
-                    iconAnchor: [15, 15]
-                })
+        class map_interface {
+            static map_options = {
+                center: [36.983731367697374, -76.29555376681454],
+                zoom: 13
+            }
+            static boat_icon = L.icon({
+                iconUrl: "https://github.com/sailbot-vt/ground_station_25/blob/testing/assets/boat.png?raw=true",
+                iconSize: [50, 50],
+                iconAnchor: [25, 25]
+            })
+            static wind_icon = L.icon({
+                iconUrl: "https://github.com/sailbot-vt/ground_station_25/blob/testing/assets/arrow.png?raw=true",
+                iconSize: [30, 30],
+                iconAnchor: [15, 15]
+            })
 
             constructor() {
                 this.boat = {
@@ -56,6 +56,17 @@
                 })
                     .addTo(this.map)
                     .bindPopup("Sailboat Location:\n ${}")
+                this.lastMouseCoords = { lat: null, lng: null };
+                this.map.on("click", (e) => {
+                    let coords = { lat: e.latlng.lat, lng: e.latlng.lng };
+                    console.log("Sending to Python:", coords);
+
+                    if (window.pyObj) {
+                        window.pyObj.receive_mouse_coords(coords); // Call Python function
+                    } else {
+                        console.error("PyQt bridge not available.");
+                    }
+                });
             }
 
             update_boat(lat, lon, heading) {
@@ -67,7 +78,7 @@
             }
 
             add_wind_arrow(lat, lon, wind_dir, wind_speed) {
-            // Skip adding if too far from the boat
+                // Skip adding if too far from the boat
                 if (
                     Math.abs(lat - this.boat.location[0]) > 0.5 ||
                     Math.abs(lon - this.boat.location[1]) > 0.5
