add icons for waypoints and buoys

--- a/src/web_engine/map.html
+++ b/src/web_engine/map.html
@@ -38,6 +38,7 @@
 
             constructor() {
                 this.waypoints = [];
+                this.buoys = [];
                 this.boat = {
                     heading: 0,
                     location: [36.983731367697374, -76.29555376681454]
