added pause icon for camera and other improvements

--- a/src/widgets/camera_widget/camera.html
+++ b/src/widgets/camera_widget/camera.html
@@ -19,7 +19,7 @@
   <body>
 
     <h1>Base64 Image Display</h1>
-    <img id="base64Image" alt="Camera Feed" />
+    <img id="base64Image" />
 
     <script>
     function setBase64Image(base64String) {
